# dashi

./: .gitignore  README.md  cli.py  dashboard.py  datasources.py  parser.py  pyproject.toml  render.py  requirements.txt  sales.html
.github/workflows/: ci.yml
builds/: Sales Overview.html
config/: yaml_parser.py
dashboards/: sample_dashboard.yml
dashi/: cli.py  dashboard.py  datasources.py  helpers.py  project_initializer.py  render.py  serve.py
dashi/charts/: __init__.py  bar.py  chart.py  line.py  pie.py  registry.py  scatter.py  table.py
dashi/config/: __init.py  yaml_parser.py
dashi/datasources/: __init__.py  base_datasource.py  csv_datasource.py  datasources.py  duckdb_datasource.py  file_datasource.py  json_datasource.py  login_mixin.py  postgres_datasource.py  registry.py  sql_datasource.py
dashi/structure/: cleaner.py  initializer.py
dashi/transforms/: transforms.py
data_sources/: sample_data.yml
staging_data/: sample_data.csv  users.json
static/: style.css
templates/: dashboard_template.html
tests/: test_charts.py  test_datasources.py  test_helpers.py  test_parser.py  test_sqldatasources.py
